// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Nav > renders collapsed 1`] = `
<DocumentFragment>
  <div
    class="_wrapper_efef43"
    id="header-menu"
  >
    <nav
      aria-label="primary navigation"
      class="_nav_efef43"
    >
      <div
        class="_menuWrapper_efef43"
      >
        <ul
          aria-labelledby="header-menu-button"
          class="_menuList_60c4df"
        >
          <li>
            <a
              aria-current="page"
              class="_link_60c4df"
              href="/"
            >
              Home
            </a>
          </li>
        </ul>
      </div>
    </nav>
  </div>
</DocumentFragment>
`;

exports[`Nav > renders expanded 1`] = `
<DocumentFragment>
  <div
    class="_wrapper_efef43 _wrapperExpanded_efef43"
    id="header-menu"
  >
    <nav
      aria-label="primary navigation"
      class="_nav_efef43"
    >
      <div
        class="_menuWrapper_efef43"
      >
        <ul
          aria-labelledby="header-menu-button"
          class="_menuList_60c4df"
        >
          <li>
            <a
              aria-current="page"
              class="_link_60c4df"
              href="/"
            >
              Home
            </a>
          </li>
        </ul>
      </div>
    </nav>
  </div>
</DocumentFragment>
`;
